--- a/client/src/index.css
+++ b/client/src/index.css
@@ -56,10 +56,28 @@
   }
 }
 
+@keyframes shimmer {
+  0% {
+    background-position: -1000px 0;
+  }
+
+  100% {
+    background-position: 1000px 0;
+  }
+}
+
 .page-container {
   padding: var(--spacing-xl);
   animation: fadeIn 0.4s ease-out forwards;
   width: 100%;
+}
+
+.skeleton {
+  background: #f6f7f8;
+  background-image: linear-gradient(to right, #f6f7f8 0%, #edeef1 20%, #f6f7f8 40%, #f6f7f8 100%);
+  background-repeat: no-repeat;
+  background-size: 2000px 100%;
+  animation: shimmer 1.5s infinite linear;
 }
 
 * {
